NOTE: uriparser is looking for help with a few things:
      https://github.com/uriparser/uriparser/labels/help%20wanted
      If you can help, please get in touch.  Thanks!

2019-xx-xx -- 0.x.x

  * Fixed: Add missing extern "C" wrapper to UriIp4.h for use from C++
  * Fixed: Link errors on Haiku regarding function inet_ntop (GitHub #45)
      Thanks to Schrijvers Luc for the patch!
  * Changed: Migrated from GNU Autotools to CMake (GitHub #17, #47)
      Thanks for their support with the CMake migration to:
      - David Demelier
      - Jørgen Ibsen
      - KangLin
      - Richard Hodges
      - Zachary Lund
  * Removed: All Windows-related build systems other than CMake
  * Soname: TODO

2019-01-02 -- 0.9.1

>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
  * Fixed: [CVE-2018-20721]
      Out-of-bounds read in uriParse*Ex* for incomplete URIs with IPv6
      addresses with embedded IPv4 address, e.g. "//[::44.1";
      mitigated if passed parameter <afterLast> points to readable memory
      containing a '\0' byte.
      Commit cef25028de5ff872c2e1f0a6c562eb3ea9ecbce4
      Thanks to Joergen Ibsen for the report!
>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
  * Fixed: When parsing a malformed URI with an IPvFuture address
      (e.g. "http://[vA.123456" missing "]"), errorPos would point to the first
      character after "v" than the actual position of the error (here: the end
      of the string)
  * Fixed: uriToStringCharsRequired* reported 1 more byte than actually needed
      for IPv4 address URIs (GitHub #41); Thanks to @gyh007 for the patch!
  * Fixed: Compilation with MinGW
      Thanks to Sandro Mani for the patch!
  * Fixed: Drop use of asprintf from the test suite for MinGW (GitHub #40)
  * Improved: For parse errors, waterproof errorPos <= afterLast
  * Soname: 1:24:0

2018-10-27 -- 0.9.0

>>>>>>>>>>>>> SECURITY >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>